--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 
 
 <!-- <p>Hello world..</p> -->
-<app-comp-one></app-comp-one> 
+
+<!-- <app-comp-one></app-comp-one>  -->
+
+<app-comp-two></app-comp-two>
