--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,6 @@
 
 <!-- <app-comp-one></app-comp-one>  -->
 
-<app-comp-two></app-comp-two>
+<!-- <app-comp-two></app-comp-two> -->
+
+<app-comp-three></app-comp-three>
