--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,20 @@
 
 <!-- <app-comp-two></app-comp-two> -->
 
-<app-comp-three></app-comp-three>
+<!-- <app-comp-three></app-comp-three> -->
+
+<app-comp-four>
+      <p #contentParagraph>Hello world.</p>
+
+      <select #options>
+            <option value="1">Option-1</option>
+            <option value="2">Option-2</option>
+            <option value="3">Option-3</option>
+      </select>
+
+
+
+</app-comp-four>
+
+
+<!-- <p>I am paragrpah</p> -->
